--- a/public/css/home-ship-online.css
+++ b/public/css/home-ship-online.css
@@ -1,3 +1,10 @@
+/* 
+    Name: Shutirtha Roy
+    Student ID: 105008711
+    Course: COS80021 Web Application Development
+    Function: This file contains the css of the shiponline.php page. 
+*/
+
 .hero {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/api/placeholder/1200/400');
     background-size: cover;
