--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,3 +1,10 @@
+/* 
+    Name: Shutirtha Roy
+    Student ID: 105008711
+    Course: COS80021 Web Application Development
+    Function: This file contains the css of the admin.php page. 
+*/
+
 .admin-panel {
     background-color: #ffffff;
     border-radius: 10px;
