--- a/public/css/pre-request.shipment.css
+++ b/public/css/pre-request.shipment.css
@@ -1,3 +1,10 @@
+/* 
+    Name: Shutirtha Roy
+    Student ID: 105008711
+    Course: COS80021 Web Application Development
+    Function: This file contains the css of the pre-request.shipment.php page. 
+*/
+
 .welcome-section {
     background-color: #ffffff;
     border-radius: 10px;
