--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,3 +1,10 @@
+/* 
+    Name: Shutirtha Roy
+    Student ID: 105008711
+    Course: COS80021 Web Application Development
+    Function: This file contains the css of the register.php page. 
+*/
+
 .registration-form {
     background-color: #ffffff;
     border-radius: 10px;
